# fasterai

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  index.html  overview.html  pyproject.toml  quickstart.html  robots.txt  search.json  settings.ini  sitemap.xml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
analyze/: sensitivity.html
core/: criteria.html  granularity.html  schedules.html
distill/: distillation_callback.html  losses.html
export/: onnx_exporter.html
fasterai/: _modidx.py
fasterai/analysis/: sensitivity.py
fasterai/analyze/: sensitivity.py
fasterai/core/: criteria.py  granularity.py  schedule.py
fasterai/distill/: all.py  distillation_callback.py  losses.py
fasterai/export/: all.py  onnx_exporter.py
fasterai/misc/: all.py  bn_folding.py  conv_decomposer.py  cpu_optimizer.py  fc_decomposer.py
fasterai/prune/: prune_callback.py  pruner.py
fasterai/quantize/: adaround.py  quantize_callback.py  quantizer.py
fasterai/regularize/: regularize_callback.py
misc/: bn_folding.html  conv_decomposer.html  cpu_optimizer.html  fc_decomposer.html
nbs/: 02_sparse.sparsify_callback.ipynb  _quarto.yml  index.qmd  nbdev.yml  overview.ipynb  quickstart.ipynb
nbs/core/: criteria.ipynb  (+2 more)
prune/: prune.pruner-copy1.html  prune_callback.html  pruner.html
quantize/: quantize.quantizer-copy1.html  quantize_callback.html  quantizer.html
regularize/: regularize_callback.html
sparse/: sparsifier.html  sparsify_callback.html
tutorials/: timm.html  walkthrough.html
(+87 files in other folders)
